objects/SerialNoProductItem__c.object
<CustomObject>
    <fields>
        <fullName>AcceptanceDateFormula__c</fullName>
        <formula>Datevalue(AcceptanceDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>検収日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcceptanceDate__c</fullName>
        <label>検収日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeliveryAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>納入先取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>納入情報</relationshipLabel>
        <relationshipName>deliveredSerialNoItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EfProductNoEndDateFormula__c</fullName>
        <formula>Datevalue(EfProductNoEndDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EF終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EfProductNoEndDate__c</fullName>
        <label>EF終了日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EfProductNo__c</fullName>
        <label>EF製番</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemJapaneseName__c</fullName>
        <formula>ItemLink__r.JapaneseName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>品目名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemLink__c</fullName>
        <label>品目リンク</label>
        <referenceTo>ProductItem__c</referenceTo>
        <relationshipLabel>シリアル番号付品目</relationshipLabel>
        <relationshipName>ItemRelation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ItemModel__c</fullName>
        <formula>ItemLink__r.Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>品目機種</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kikaku__c</fullName>
        <formula>ItemLink__r.Kikaku__c</formula>
        <label>規格</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelNamePI__c</fullName>
        <formula>ItemLink__r.JapaneseName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>機種名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelPI__c</fullName>
        <formula>ItemLink__r.Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>機種</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelsAbbreviation__c</fullName>
        <label>機種略称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonyusakiAccountLink__c</fullName>
        <formula>IF(  !ISNULL(UnitBody__c) , HYPERLINK( &apos;/apex/jeol_nonyusakishokaipage?id=&apos;&amp; Id ,  UnitBody__c , &apos;_self&apos;), &apos;&apos;)</formula>
        <label>本体号機</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentItem__c</fullName>
        <label>親品目</label>
        <length>47</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentNumber__c</fullName>
        <label>親シリアル番号</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentSerialNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>親シリアル番号付品目</label>
        <referenceTo>SerialNoProductItem__c</referenceTo>
        <relationshipLabel>構成</relationshipLabel>
        <relationshipName>childSerialNumberItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>位置</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesCustomer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>販売先取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>納入品情報</relationshipLabel>
        <relationshipName>SNPISalesCstm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesTargetCustomer__c</fullName>
        <label>販売先取引先コード</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SerialNo__c</fullName>
        <externalId>true</externalId>
        <label>シリアル番号_連携用</label>
        <length>78</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SerialNumberLink__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; +  Id ,  SerialNo__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>シリアル番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeriesPI__c</fullName>
        <formula>ItemLink__r.Series__c</formula>
        <label>系列</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipDateFormula__c</fullName>
        <formula>Datevalue(ShipDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>出荷日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShipDate__c</fullName>
        <label>出荷日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SpecialNote__c</fullName>
        <label>特別契約メモ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusOfUseName__c</fullName>
        <formula>IF(StatusOfUse__c = &quot;1&quot;, &quot;常時使用&quot;, 
IF(StatusOfUse__c = &quot;2&quot;, &quot;使用&quot;,
IF(StatusOfUse__c = &quot;3&quot;, &quot;未使用&quot;,
IF(StatusOfUse__c = &quot;9&quot;, &quot;廃棄&quot;,
IF(StatusOfUse__c = &quot;10&quot;, &quot;適用なし&quot;,&quot;&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>使用状況名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusOfUse__c</fullName>
        <label>使用状況</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SvcForm__c</fullName>
        <label>SVC形態</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitBodyContact1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>本体号機別窓口：１</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>本体号機別窓口：１</relationshipLabel>
        <relationshipName>SNPIUnitBodyContact1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UnitBodyContact1_affiliation__c</fullName>
        <formula>UnitBodyContact1__r.Affiliation__c</formula>
        <label>本体号機別窓口：１ 所属</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitBodyContact2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>本体号機別窓口：２</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>本体号機別窓口：２</relationshipLabel>
        <relationshipName>SNPIUnitBodyContact2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UnitBodyContact2_affiliation__c</fullName>
        <formula>UnitBodyContact2__r.Affiliation__c</formula>
        <label>本体号機別窓口：２ 所属</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitBody__c</fullName>
        <externalId>true</externalId>
        <label>本体号機</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WasteSituation__c</fullName>
        <label>廃棄状況</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>シリアル番号付品目</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>SerialNumberLink__c</columns>
        <columns>SerialNo__c</columns>
        <columns>ModelPI__c</columns>
        <columns>ModelNamePI__c</columns>
        <columns>ItemJapaneseName__c</columns>
        <columns>UnitBody__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>update_10day</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>ItemJapaneseName__c</columns>
        <columns>UnitBody__c</columns>
        <columns>ItemLink__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SalesCustomer__c</columns>
        <columns>SerialNo__c</columns>
        <columns>ParentNumber__c</columns>
        <columns>SerialNumberLink__c</columns>
        <columns>StatusOfUse__c</columns>
        <columns>StatusOfUseName__c</columns>
        <columns>SeriesPI__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>7/9/2014 12:00 AM</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>K</value>
        </filters>
        <label>更新　10日前</label>
    </listViews>
    <nameField>
        <label>品目</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>